--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -19,9 +19,13 @@ body {
 input {
     padding: 1px 3px;
     background: var(--color-bg);
-    border-color: var(--color-fg);
     border: 1px solid var(--color-fg);
     border-radius: 3px;
+}
+
+input[type="range"] {
+    padding: 0;
+    border: none;
 }
 
 input:disabled {
