--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -57,9 +57,21 @@ output {
 .label-button {
     white-space: nowrap;
     padding: 0; /* override label */
+    position: relative;
+    contain: none;
 }
 .label-button input {
-    display: none;
+    appearance: none;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+
+    width: 0;
+    height: 0;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 button,
