Use -webkit-appearance for chrome compat

--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -61,6 +61,7 @@ output {
     contain: none;
 }
 .label-button input {
+    -webkit-appearance: none;
     appearance: none;
 
     position: absolute;
