--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -63,6 +63,8 @@ output {
 .label-button input {
     -webkit-appearance: none;
     appearance: none;
+    padding: 0;
+    border: none;
 
     position: absolute;
     top: 0;
