--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -169,6 +169,7 @@ dialog {
 
     background: var(--color-bg);
     color: var(--color-fg);
+    box-sizing: content-box;
     padding: 1em;
     border: 1px solid var(--color-fg);
     border-radius: 12px;
@@ -180,7 +181,7 @@ dialog {
 }
 
 .message-dialog {
-    max-width: 25em;
+    max-width: 24em;
 }
 .message-out {
     white-space: pre-wrap;
