Disable webkit-touch-callout

--- a/src/ui/WebApp.css
+++ b/src/ui/WebApp.css
@@ -33,6 +33,7 @@ html, body {
     touch-action: none;
     /* no swipe to go back or refresh */
     overscroll-behavior: none;
+    -webkit-touch-callout: none;
 }
 
 body {
