Fix blocking pattern table scrolling; close #110

--- a/src/ui/Util.css
+++ b/src/ui/Util.css
@@ -26,6 +26,9 @@
 .vscrollable {
     overflow-y: auto;
 }
+.vnoscroll {
+    overflow-y: hidden;
+}
 .hscrollable > *,
 .vscrollable > * {
     flex-shrink: 0;
