Add colors to effect buttons; #106

--- a/src/ui/CustomElements.css
+++ b/src/ui/CustomElements.css
@@ -182,6 +182,22 @@ pattern-table .sel-cell { /* extra specificity */
     font-size: 0.6em;
 }
 
+.pitch-effect-btn:not(.show-checked) {
+    background: var(--color-bg-pitch);
+}
+.volume-effect-btn:not(.show-checked) {
+    background: var(--color-bg-volume);
+}
+.panning-effect-btn:not(.show-checked) {
+    background: var(--color-bg-panning);
+}
+.timing-effect-btn:not(.show-checked) {
+    background: var(--color-bg-timing);
+}
+.control-effect-btn:not(.show-checked) {
+    background: var(--color-bg-control);
+}
+
 /* PianoKeyboard */
 
 .white-keys :not(:checked) + span {
