--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -43,7 +43,7 @@ input[type="range"] {
 }
 
 input:disabled {
-    background: var(--color-bg-btn)
+    background: var(--color-bg-btn);
 }
 
 .small-input {
