--- a/src/ui/Theme.css
+++ b/src/ui/Theme.css
@@ -13,7 +13,7 @@ body {
     --color-bg-alt: #d28;
     --color-fg-alt: #f8a;
 
-    --color-error: #f44;
+    --color-fg-error: #f44;
 
     --color-bg-pitch: #503;
     --color-fg-pitch: #fac;
