--- a/src/ui/Util.css
+++ b/src/ui/Util.css
@@ -77,6 +77,7 @@
 
 .justify-start,
 .button-list > button,
+.button-list > .label-button span,
 .button-list button:first-child {
     justify-content: start;
 }
