Clip playback status controls instead of hiding them

--- a/src/ui/Util.css
+++ b/src/ui/Util.css
@@ -47,6 +47,10 @@
     flex-wrap: wrap;
 }
 
+.shrink-clip-x {
+    min-width: 0;
+    overflow-x: hidden;
+}
 .shrink-clip-y {
     min-height: 0;
     overflow-y: hidden;
