--- a/src/ui/CustomElements.css
+++ b/src/ui/CustomElements.css
@@ -250,6 +250,17 @@ pattern-matrix thead th {
     display: none !important;
 }
 
+pattern-matrix td {
+    position: relative;
+}
+pattern-matrix canvas {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    image-rendering: pixelated;
+}
+
 pattern-matrix select {
     min-width: 0;
     min-height: 0;
@@ -268,7 +279,6 @@ pattern-matrix select {
 }
 
 pattern-matrix #playbackLine {
-    contain: none;
     position: absolute;
     height: 2px;
     transform: translate(0, -50%);
