Add peak meter; #81

--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -53,6 +53,13 @@ input:disabled {
     width: 6em;
 }
 
+meter {
+    width: 100%;
+}
+meter::-webkit-meter-optimum-value {
+    background: var(--color-fg-hl);
+}
+
 textarea {
     white-space: pre;
 }
