--- a/src/ui/Theme.css
+++ b/src/ui/Theme.css
@@ -13,6 +13,7 @@ body {
     --color-bg-alt: #d28;
     --color-fg-alt: #f8a;
 
+    --color-fg-warn: #fd4;
     --color-fg-error: #f44;
 
     --color-bg-pitch: #503;
