Adjust fg-alt color slightly

--- a/src/ui/Theme.css
+++ b/src/ui/Theme.css
@@ -11,7 +11,7 @@ body {
     --color-fg-hl-dim: #a6d;
 
     --color-bg-alt: #d28;
-    --color-fg-alt: #f8a;
+    --color-fg-alt: #f8b;
 
     --color-fg-warn: #fd4;
     --color-fg-error: #f44;
