Prompt to apply tempo/speed when focused; close #109

--- a/src/ui/Util.css
+++ b/src/ui/Util.css
@@ -85,6 +85,9 @@
 .button-list button:first-child {
     justify-content: start;
 }
+.justify-end {
+    justify-content: end;
+}
 
 .align-start {
     align-items: start;
