Add record dialog; close #42

--- a/src/ui/CustomElements.css
+++ b/src/ui/CustomElements.css
@@ -490,3 +490,9 @@ pattern-matrix #playbackLine {
 .wave-play-mark {
     background: var(--color-fg-alt);
 }
+
+/* RecordDialog */
+
+record-dialog dialog {
+    width: 15em;
+}
